// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shop items Opens cart when "add to cart" button is clicked 1`] = `
<DocumentFragment>
  <div
    class="items"
  >
    <div
      class="item-container"
    >
      <div
        class="item"
      >
        <div
          class="image"
          style="background-image: url(undefined); background-size: contain; background-repeat: no-repeat;"
        >
          <button
            id="add-to-cart"
          >
            Add to Cart
          </button>
        </div>
        <div
          class="item-info"
        >
          <p
            class="title"
          >
            name1
          </p>
          <p>
            $
          </p>
        </div>
      </div>
    </div>
    <div
      class="item-container"
    >
      <div
        class="item"
      >
        <div
          class="image"
          style="background-image: url(undefined); background-size: contain; background-repeat: no-repeat;"
        >
          <button
            id="add-to-cart"
          >
            Add to Cart
          </button>
        </div>
        <div
          class="item-info"
        >
          <p
            class="title"
          >
            name2
          </p>
          <p>
            $
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shop items Renders items on page 1`] = `
<div>
  <div
    class="items"
  >
    <div
      class="item-container"
    >
      <div
        class="item"
      >
        <div
          class="image"
          style="background-image: url(undefined); background-size: contain; background-repeat: no-repeat;"
        >
          <button
            id="add-to-cart"
          >
            Add to Cart
          </button>
        </div>
        <div
          class="item-info"
        >
          <p
            class="title"
          >
            name1
          </p>
          <p>
            $
          </p>
        </div>
      </div>
    </div>
    <div
      class="item-container"
    >
      <div
        class="item"
      >
        <div
          class="image"
          style="background-image: url(undefined); background-size: contain; background-repeat: no-repeat;"
        >
          <button
            id="add-to-cart"
          >
            Add to Cart
          </button>
        </div>
        <div
          class="item-info"
        >
          <p
            class="title"
          >
            name2
          </p>
          <p>
            $
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
